<resources>
    <string name="app_name">Calculator</string>
    <string name="editTextDisplay" translatable="false">0</string>
    <string name="buttonClear" translatable="false">CE</string>
    <string name="buttonEquals" translatable="false">=</string>
    <string name="buttonModulo" translatable="false">%</string>
    <string name="buttonPower" translatable="false">^</string>
    <string name="buttonPlus" translatable="false">+</string>
    <string name="buttonMinus" translatable="false">-</string>
    <string name="buttonMulti" translatable="false">*</string>
    <string name="buttonDiv" translatable="false">/</string>
    <string name="buttonDot" translatable="false">.</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button0" translatable="false">0</string>
    <string name="toast_unsupportedOperation">Unsupported operation..</string>
    <string name="toast_givePositiveNumbers">Give Positive Numbers!</string>
    <string name="toast_divisionByZero">Division by Zero!</string>
    <string name="str_delete">Delete</string>
</resources>